manifests/quotationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotationservice
spec:
  selector:
    matchLabels:
      app: quotationservice
  template:
    metadata:
      labels:
        app: quotationservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: quotationservice
          image: quotationservice
          ports:
            - name: grpc
              containerPort: 9001
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 200m
              memory: 180Mi
            limits:
              cpu: 300m
              memory: 300Mi
          volumeMounts:
            - name: client-tls
              mountPath: /etc/postgresql/tls/client
              readOnly: true
      volumes:
        - name: client-tls
          secret:
            secretName: postgres-client-tls
          # readinessProbe:
          #   initialDelaySeconds: 20
          #   periodSeconds: 15
          #   exec:
          #     command: ["/bin/grpc_health_probe", "-addr=:9001"]
          # livenessProbe:
          #   initialDelaySeconds: 20
          #   periodSeconds: 15
          #   exec:
          #     command: ["/bin/grpc_health_probe", "-addr=:9001"]
---
apiVersion: v1
kind: Service
metadata:
  name: quotationservice
spec:
  type: ClusterIP
  selector:
    app: quotationservice
  ports:
    - name: grpc
      port: 9001
      targetPort: 9001
    - name: metrics
      port: 9090
      targetPort: 9090
