manifests/frontendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendservice
spec:
  selector:
    matchLabels:
      app: frontendservice
  template:
    metadata:
      labels:
        app: frontendservice
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: server
          image: frontendservice
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9090
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/"
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
spec:
  type: ClusterIP
  selector:
    app: frontendservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendservice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontendservice
            port:
              number: 80
